res/scss/management.scss
/* ... */
table.widefat.currency_settings_table {
	float: left;
	width: 80px;
	border-left: none;
	clear: none;
		td.wcml-col-delete,
		td.wcml-col-edit {
			vertical-align: middle;
			text-align: center;
			&:first-child {
				border-left: 1px solid #e5e5e5;
			}
		}
}



.currency_value .wcml-error,
.wcml-error {
	font-size: 10px;
	color: #f00;
	display: inline-block;
}

.trbl_variables_products {
	padding: 10px;
	border: 1px solid #8cceea;
	background-color: #eff8fc;
	border-radius: 5px;
	label span {
		font-weight: bold;
	}
}

.wcml_trbl_warning {
	padding: 10px;
	margin-bottom: 10px;
	border: 1px solid #f00;
	background-color: #ffb7b7;
	border-radius: 5px 5px;
}

#wcml_sync_variations {
	background-color: #21759b;
	background-image: linear-gradient(to bottom, #2a95c5, #21759b);
	border-color: #21759b;
	border-bottom-color: #1e6a8d;
	box-shadow: inset 0 1px 0 rgba(120, 200, 230, 0.5);
	color: #fff;
	text-decoration: none;
	text-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
}

.wcml_duplicate_product_notice td {
	border-bottom: none !important;
}

.wcml_product_status_text,
.prod_parent_text {
	font-style: italic;
	color: #9A9A9A;
}

.wcml_no_found_text {
	text-align: center;
}

/* on/off buttons */

.currency_languages {
	&:first-child {
		border-left: 1px solid #e5e5e5;
	}
	position: relative;
	text-align: center;
	ul {
		margin: 0;
		text-align: center;
		li {
			margin: 0;
			display: none;
			&.on {
				display: inline-block;
			}
		}
	}
}
.currencies-table-content {
	display: inline-block;
	min-width: 291px;

	.tablenav.top {
		margin-bottom: 15px;
	}
	@media(min-width: 1200px) {
		min-width: 600px;
	}
	&::after {
		display: table;
		clear: both;
		content: '';
	}
}
table.widefat.currency_lang_table {
	border-left: none;
	border-right: none;
	thead{
		.currency-lang-flags {
			height: 23px;
		}
		tr {
			height: 68px - 23px;
		}
		td {
			border-bottom: 0;
			text-align: center;
			padding: 3px 10px 1px 0;
			font-size: 1em;
		}
		th {
			padding-top: 0;
			padding-bottom: 0;
			text-align: center;
		}
	}
}

.currency_wrap {
	width: 100%;
	max-width: calc(100% - 255px - 80px);
	min-width: 70px;
	float: left;
	margin-bottom: 10px;
	position: relative;
	&::after {
		content: '';
		position: absolute;
		top: 1px;
		bottom: 1px;
		right: 0;
		width: 15px;
		background: linear-gradient(to right, transparent, #fff);
	}
	@media (max-width: 782px) {
		max-width: calc(100% - 121px - 80px);
	}
}

.currency_inner {
	overflow-x: auto;
	overflow-y: visible;
}

.currency_table,
.widefat.currency_country_table,
.currency_lang_table,
.currency_settings_table {
	clear: none;
	thead {
		tr {
			height: 68px;
		}
	}
	tr {
		height: 50px;

		&.wcml-row-currency-country {
			.all-countries-except {
				float: left;
				margin-right: 2px;

				& + .truncate {
					@media (min-width: 992px)and(max-width: 1399px) {
						max-width: 200px;
					}
					@media (min-width: 1400px)and(max-width: 1599px) {
						max-width: 400px;
					}
					@media (min-width: 1600px) {
						max-width: 500px;
					}
				}
			}
			.truncate {
				display: block;
				@media (max-width: 499px) {
					max-width: 80px;
				}
				@media (min-width: 500px)and(max-width: 991px) {
					max-width: 200px;
				}
				@media (min-width: 992px)and(max-width: 1399px) {
					max-width: 240px;
				}
				@media (min-width: 1400px)and(max-width: 1599px) {
					max-width: 500px;
				}
				@media (min-width: 1600px) {
					max-width: 600px;
				}
			}
		}
	}
	.default_currency {
		@media (max-width: 782px) {
			height: 55px;
		}
	}
}

.currency_country_table{
	width: 100%;
	max-width: calc(100% - 255px - 80px);
	min-width: 70px;
	float: left;
}

.currency_lang_table {
	th {
		text-align: center;
	}
	td {
		vertical-align: middle;
	}
	&.widefat td {
		padding-right: 0;
		padding-left: 0;
	}
	@media (max-width: 782px) {
		#wpbody & select {
			font-size: 10px;
		}
		[class*='otgs-ico']::before {
			font-size: 27px;
		}
	}
}

.default_currency {
	select {
		font-size: 12px;
		height: 24px;
		margin: 0;
		margin-right: 2px;
	}
	td {
		border-top: 1px solid #e5e5e5;
	}
	.inf_message {
		font-size: 10px;
		font-style: italic;
		color: #9A9A9A;
	}
}

/* ==================================================
		Currency switcher
=====================================================*/

#wcml_currencies_order {
	display: block;
	overflow: hidden;
	width: 100%;
	li {
		float: left;
		margin: 2px 4px 2px 0;
		padding: 2px 8px;
		border: 1px solid #DFDFDF;
		border-radius: 2px;
		background: linear-gradient(to top, #ECECEC, #F9F9F9) repeat scroll 0 0 #F1F1F1;
		cursor: move;
	}
}

.wcml_currencies_order_ajx_resp {
font-weight: 500;
margin: 0 5px;
padding: 1px 4px 2px;
border-radius: 3px;
white-space: nowrap;

	//success
		color: #46b450;
		background-color: rgba(92, 255, 102, 0.15);

}

.wcml-cs-list {
	font-size: inherit;
	width: 100%;
	border-collapse: collapse;
	border: lightgrey 1px solid;
	vertical-align: middle;
	thead tr {
		border: lightgrey 1px solid;
	}
	th, td {
		text-align: center;
		padding: 5px;
	}
	.wcml-cs-cell-preview {
		text-align: start;
	}
	.wcml-cs-actions {
		width: 60px;
		a {
			display: inline-block;
			width: 20px;
			cursor: pointer;
		}
	}
	@media (max-width: 480px) {
		display: block;
		thead {
			display: none;
		}
		tbody,
		tr:not(.wcml-cs-empty-row),
		td {
			display: block !important;
			box-sizing: border-box;
		}
		tr {
			&::after {
				display: table;
				content: '';
				clear: both;
			}
			& + tr{
				margin-top: 30px;
			}
		}
		.wcml-cs-cell-preview {
			width: 100%;
		}
		.wcml-cs-widget-name,
		.wcml-cs-actions {
			width: 50%;
			float: left;
		}
		.wcml-cs-widget-name {
			text-align:start;
		}
		.wcml-cs-actions {
			text-align: end;
		}
	}
}
/* ... */

